deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-manager
  labels:
    app: indexer-manager
spec:
  selector:
    matchLabels:
      app: indexer-manager
  replicas: 1
  template:
    metadata:
      labels:
        app: indexer-manager
    spec:
      volumes:
        - name: project-dir
          emptyDir:
            medium: Memory
      containers:
        - name: indexer
          imagePullPolicy: Always
          image: massbit/manager
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: project-dir
              mountPath: '/projects'
          securityContext:
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
