deployment/k8s/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-manager-1
  labels:
    app: indexer-manager
    release: indexer-manager-1
spec:
  selector:
    matchLabels:
      release: indexer-manager-1
  replicas: 1
  template:
    metadata:
      labels:
        release: indexer-manager-1
    spec:
      volumes:
        - name: project-dir
          emptyDir:
            medium: Memory
      containers:
        - name: indexer
          imagePullPolicy: IfNotPresent
          image: massbit/manager
          volumeMounts:
            - name: project-dir
              mountPath: '/projects'
          securityContext:
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
