deployment/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: substrate-indexer-manager
  labels:
    app: substrate-indexer-manager
spec:
  selector:
    matchLabels:
      app: substrate-indexer-manager
  replicas: 1
  template:
    metadata:
      labels:
        app: substrate-indexer-manager
    spec:
      volumes:
        - name: project-dir
          emptyDir:
            medium: Memory
      containers:
        - name: indexer
          imagePullPolicy: IfNotPresent
          image: IMAGE:TAG
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: project-dir
              mountPath: '/projects'
          securityContext:
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: substrate-indexer-manager
  name: substrate-indexer-manager
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 3000
  selector:
    app: substrate-indexer-manager
  type: ClusterIP
