deployment/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: indexer-manager
  name: indexer-manager
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app: indexer-manager
  type: ClusterIP
